--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gulp-ng-annotate": "2.0.0",
     "gulp-uglify": "1.5.3",
     "jshint": "^2.9.4",
-    "local-web-server": "1.2.6"
+    "local-web-server": "^1.2.6"
   },
   "scripts": {
     "build": "gulp",
